--- a/views/login.ejs
+++ b/views/login.ejs
@@ -33,6 +33,7 @@
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
+      <p>Don't have an account? <a href='/signup'>Make one now!</a></p>
     </section>
   </div>
 </main>
