Incrementing changes: successful changes of pre-existing fields - Title and Caption to Date and Odometer

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -8,19 +8,19 @@
               <a href="/logout" class="col-3 btn btn-primary">Logout</a>
           </div>
           <div class="mt-5">
-            <h2>Add a post</h2>
+            <h2>New refuel</h2>
             <form action="/post/createPost" enctype="multipart/form-data" method="POST">
               <div class="mb-3">
                 <label for="imgUpload" class="form-label">Image</label>
                 <input type="file" class="form-control" id="imageUpload" name="file">
               </div>
               <div class="mb-3">
-                  <label for="title" class="form-label">Title</label>
-                  <input type="text" class="form-control" id="title" name="title">
+                  <label for="date" class="form-label">Date</label>
+                  <input type="date" class="form-control" id="date" name="date">
               </div>
               <div class="mb-3">
-                <label for="caption" class="form-label">Caption</label>
-                <textarea class="form-control" id="caption" name="caption"></textarea>
+                <label for="odometer" class="form-label">Odometer</label>
+                <input type="number" class="form-control" id="odometer" name="odometer"></inp>
               </div>
               <button type="submit" class="btn btn-primary" value="Upload">Submit</button>
             </form>
