Successfully added 'name' to user profile and related routes and views; added custom greeting by name on profile to utilize; updated carSchema

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,12 +3,13 @@
   <div class="row mt-5">
       <div class="col-6">
           <div>
-              <!-- Figure out why realName isn't showing up - so far it's not sending to server at all - <p><strong>Name</strong>: <%= user.realName %></p> --> 
+              <!-- Figure out why realName isn't showing up - so far it's not sending to server at all - <p><strong>Name</strong>: <%= user.realName %></p> -->
               <p><strong>Username</strong>: <%= user.username %></p>
               <p><strong>Email</strong>: <%= user.email %></p>
               <a href="/logout" class="col-3 btn btn-primary">Logout</a>
           </div>
           <div class="mt-5">
+            <h2>Hi <%= user.name %>, welcome to carchive!</h2>
             <h2>New refuel</h2>
             <form action="/post/createPost" enctype="multipart/form-data" method="POST">
               <div class="mb-3">
