--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -11,6 +11,14 @@
       <p>Welcome to carchive! Sign up for your account</p>
       <form action="/signup" method="POST">
         <div class="mb-3">
+          <label for="name" class="form-label">Name</label>
+          <input
+            type="text"
+            class="form-control"
+            id="name"
+            name="name"
+          />
+        <div class="mb-3">
           <label for="username" class="form-label">Username</label>
           <input
             type="text"
