--- a/views/refuel.ejs
+++ b/views/refuel.ejs
@@ -2,20 +2,20 @@
 <div class="container">
   <div class="row justify-content-center mt-5">
     <div class="col-6">
-      <h2><%= post.title %></h2>
-      <img class="img-fluid" src="<%= post.image%>" />
+      <h2><%= refuel.title %></h2>
+      <img class="img-fluid" src="<%= refuel.image%>" />
       <div class="row justify-content-between">
         <form
           class="col-1"
-          action="/post/likePost/<%= post.id %>?_method=PUT"
+          action="/refuel/likePost/<%= refuel.id %>?_method=PUT"
           method="POST"
         >
           <button class="btn btn-primary fa fa-heart" type="submit"></button>
         </form>
-        <h3 class="col-3">Likes: <%= post.likes %></h3>
-        <%if(post.user == user.id){ %>
+        <h3 class="col-3">Likes: <%= refuel.likes %></h3>
+        <%if(refuel.user == user.id){ %>
         <form
-          action="/post/deletePost/<%= post.id %>?_method=DELETE"
+          action="/refuel/deletePost/<%= refuel.id %>?_method=DELETE"
           method="POST"
           class="col-3"
         >
@@ -26,7 +26,7 @@
     </div>
     
     <div class="col-3 mt-5">
-      <p><%= post.caption %></p>
+      <p><%= refuel.caption %></p>
     </div>
     <div class="col-6 mt-5">
       <a class="btn btn-primary" href="/profile">Return to Profile</a>
