--- a/views/intro.ejs
+++ b/views/intro.ejs
@@ -10,7 +10,7 @@
       <% }) %> <% } %>
 
       <h2>Welcome to carchive! Get started by adding your car:</h2>
-      <form action="/submitIntro" method="POST">    <!-- 8/7/24: changed from "intro" to "submitIntro" after watching class 44/45 (2:21:00) -->
+      <form action="/createCar" method="POST">    <!-- 8/7/24: changed from "intro" to "submitIntro" after watching class 44/45 (2:21:00) -->
         <!-- Add on to note above: I need to have something retrieve this intro page first. Need to bring this page up after user registers. => make a -->
         <!-- 8/5/24: Changed /signup to /intro -->
         <div class="mb-3">
