--- a/views/intro.ejs
+++ b/views/intro.ejs
@@ -11,7 +11,7 @@
 
       <h2>Welcome to carchive! Get started by adding your car:</h2>
       <form action="/createCar" method="POST">    <!-- 8/7/24: changed from "intro" to "submitIntro" after watching class 44/45 (2:21:00) -->
-        <!-- Add on to note above: I need to have something retrieve this intro page first. Need to bring this page up after user registers. => make a -->
+        <!-- Add on to note above: I need to have something retrieve this intro page first. Need to bring this page up after user registers. => make a "isSetUpComplete" key with default "false" value and have into page load if value is false -->
         <!-- 8/5/24: Changed /signup to /intro -->
         <div class="mb-3">
           <label for="carMake" class="form-label">Car Make</label>
