--- a/views/addCar.ejs
+++ b/views/addCar.ejs
@@ -9,7 +9,12 @@
       <div class="alert alert-info"><%= el.msg %></div>
       <% }) %> <% } %>
 
-      <h2>Welcome to carchive! Get started by adding your car:</h2>
+      <% if(user.name){ %>
+        <h2>Hi <%= user.name %>, welcome to carchive!</h2>
+      <% } else{ %>
+        <h2>Welcome to carchive!</h2>
+      <% } %>
+      
       <form action="/createCar" method="POST">    <!-- 8/7/24: changed from "intro" to "submitIntro" after watching class 44/45 (2:21:00) -->
         <!-- Add on to note above: I need to have something retrieve this intro page first. Need to bring this page up after user registers. => make a "isSetUpComplete" key with default "false" value and have into page load if value is false -->
         <!-- 8/5/24: Changed /signup to /intro -->
@@ -54,7 +59,7 @@
           />
         </div>
         <button type="submit" class="btn btn-primary">
-          Take me to my garage!
+          Add Car
         </button>
       </form>
     </section>
