--- a/views/addCar.ejs
+++ b/views/addCar.ejs
@@ -53,8 +53,8 @@
           <input
             type="number"
             class="form-control"
-            id="odometer"
-            name="odometer"
+            id="initialOdometer"
+            name="initialOdometer"
             value="Current mileage"
           />
         </div>
